--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "dependencies": {
+    "@uniswap/sdk": "^3.0.3",
+    "@uniswap/sdk-core": "^3.0.1",
+    "@uniswap/smart-order-router": "^2.5.30",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "jsbi": "^3.2.5",
+    "web3": "^1.7.4",
+    "web3-utils": "^1.7.4"
   }
 }
